changed blogs style

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="buy house, sell house, buy home, sell home, orlando, florida, realtor, realty, stellar mls, revolution realty, new construction, windermere, winter garden, florida home investment"
     />
-    <title>Gold Key Group - Realtors in Orlando</title>
+    <title>Gold Key Group | Realtors in Orlando</title>
 
     <link rel="stylesheet" href="../CSS/main/main.css" />
     <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
@@ -23,8 +23,8 @@
   </head>
   <!-- BODY START -->
   <body>
-    <!-- ####################################################################### -->
-    <!-- ####################################################################### -->
+<!-- ####################################################################### -->
+<!-- ####################################################################### -->
     <!-- HEADER SCREEN START -->
     <section class="first--screen" id="home">
       <header class="main--header">
@@ -113,34 +113,39 @@
 <!-- ####################################################################### -->
     <!-- MAIN START -->
     <main>
-
+<!-- ####################################################################### -->
+<!-- ####################################################################### -->
+<!-- NAV ICONS START -->
+<div id="nav--icons">
+  <a href="../HTML/index.html#home">
+    <svg class="fas fa-home"></svg>
+  </a>
+  <a
+  href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+  target="_blank"
+        >
+        <svg class="fas fa-envelope"></svg>
+      </a>
+        <a href="../HTML/index.html#phone--numbers">
+          <svg class="fas fa-phone"></svg>
+        </a>
+      </div>
+      <!-- NAV ICONS START -->
 <!-- ####################################################################### -->
 <!-- ####################################################################### -->
     <!-- BLOG SCREEN START -->
-    <div id="nav--icons">
-            <a href="../HTML/index.html#home">
-              <svg class="fas fa-home"></svg>
-            </a>
-            <a
-              href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
-              target="_blank"
-            >
-              <svg class="fas fa-envelope"></svg>
-            </a>
-            <a href="../HTML/index.html#phone--numbers">
-              <svg class="fas fa-phone"></svg>
-            </a>
-    </div>
     <section class="screen">
       <div class="content">
+
         <a href="" class="title--a" title="Click here to view more blogs">
         <h1 class="gkg ts" id="blogs--in--main">Blogs</h1>
         </a>
+
           <div class="blog--flex">
             <a href="#" class="blog--box">
               <img src="../Images/faq.jpeg" alt="#" class="blog--img">
                 <h3 class="blog--title gkg">
-                  Investor's FAQ 2.0
+                  Investor's FAQ
                 </h3>
               <p class="blog--p">
                 <!-- LOREM 15 -->
@@ -148,7 +153,7 @@
               </p>
             </a>
             <a href="#" class="blog--box">
-              <img src="../Images/faq.jpeg" alt="" class="blog--img">
+              <img src="../Images/b2b-2.png" alt="" class="blog--img">
                 <h3 class="blog--title gkg">
                   Relocation
                 </h3>
