--- a/HTML/sell.html
+++ b/HTML/sell.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="buy house, sell house, buy home, sell home, orlando, florida, realtor, realty, stellar mls, revolution realty, new construction, windermere, winter garden, florida home investment"
     />
-    <title>Gold Key Group - Search for a Home</title>
+    <title>Sell my house | Gold Key Group</title>
 
     <link rel="stylesheet" href="../CSS/main/main.css" />
     <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
@@ -26,38 +26,49 @@
     <!-- ####################################################################### -->
     <!-- ####################################################################### -->
     <!-- HEADER SCREEN START -->
-    <section class="first--screen">
-      <header class="main--header">
+    <section class="first--screen" id="home">
+      <header class="alt--header">
         <div class="header--flex">
-          <div class="header--col">
-            <h1 class="gkg gkg--lrg">
+          <div class="header--col c1">
+            <h1 class="gkg gkg--lrg ts">
               GOLD <br />
               KEY <br />
               GROUP
             </h1>
             <br />
-            <p>
+            <p class="egg--p">
               We speak
               <em><a href="#ENG" title="Click to translate">English</a></em> &
-              <em><a href="#ESP" title="Click to translate">Spanish</a></em> !
+              <em><a href="#ESP" title="Click to translate">Spanish</a> !</em>
             </p>
           </div>
-          <div class="header--col">
-            <img src="../Images/maria-z--and--paula-c.jpg" alt="Our Agents" />
+          <div class="header--col c2">
+            <img
+              src="../Images/maria-z--and--paula-c.jpg"
+              alt="Our Agents"
+              class="bs"
+            />
           </div>
         </div>
-        <p>
-          If you're looking to <b>buy</b> or <b>sell</b> a house in
-          <b>Florida</b>, you've come to the right place!
+        <p class="egg--p" id="header--text">
+          Looking to
+          <b>buy</b>
+          or
+          <b>sell</b>
+          a house in
+          <b>Florida</b>
+          ?
+          <br />
+          You're at the right place!
         </p>
       </header>
-
       <div class="header--icons">
         <a href="../HTML/index.html#home">
           <svg class="fas fa-home"></svg>
         </a>
         <a
           href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+          target="_blank"
         >
           <svg class="fas fa-envelope"></svg>
         </a>
@@ -65,13 +76,12 @@
           <svg class="fas fa-phone"></svg>
         </a>
       </div>
-
       <div class="header--b--icons">
         <a href="https://www.facebook.com/goldkeyorlando/" target="_blank">
           <svg class="fab fa-facebook-f"></svg>
         </a>
         <a href="https://www.instagram.com/goldkey_orlando/" target="_blank">
-          <svg class="fab fa-instagram"></svg>
+          <i class="fab fa-instagram fa-fw"></i>
         </a>
         <a href="#" target="_blank">
           <svg class="fab fa-twitter"></svg>
@@ -80,28 +90,30 @@
       <img
         src="../Images/Revolution Realty.png"
         alt="Revolution Realty"
-        class="rr--logo"
+        class="rr--logo bs"
       />
     </section>
     <!-- HEADER SCREEN END -->
     <!-- ####################################################################### -->
     <!-- ####################################################################### -->
     <!-- TOP NAVBAR START -->
-    <div class="nav--bg">
+    <div id="top--nav">
       <nav id="main--nav">
         <h3 class="gkg"><a href="index.html">GKG</a></h3>
         <ul>
-          <li><a href="../HTML/index.html#home">Home</a></li>
-          <li><a href="../HTML/index.html#about">About</a></li>
+          <li><a href="../HTML/index.html#blogs--in--main">Blogs</a></li>
+          <li><a href="../HTML/index.html#phone--numbers">About us</a></li>
+          <li><a href="../HTML/index.html#why--us">Why us</a></li>
           <li><a href="../HTML/index.html#contact">Contact</a></li>
-          <li><a href="../HTML/search.html" target="_blank">Search</a></li>
-          <li><a href="../HTML/sell.html" id="sell--home">Sell</a></li>
+          <li><a href="../HTML/search.html" target="_blank">SEARCH</a></li>
+          <li><a href="../HTML/sell.html" id="sell--home">SELL</a></li>
         </ul>
       </nav>
     </div>
+
     <!-- TOP NAVBAR END -->
-    <!-- ####################################################################### -->
-    <!-- ####################################################################### -->
+    <!-- ################################################################### -->
+    <!-- ################################################################### -->
     <!-- SELLER FORM SCREEN START -->
     <section class="screen">
       <div class="content">
