--- a/HTML/search.html
+++ b/HTML/search.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="buy house, sell house, buy home, sell home, orlando, florida, realtor, realty, stellar mls, revolution realty, new construction, windermere, winter garden, florida home investment"
     />
-    <title>Search for a house in Orlando | Gold Key Group</title>
+    <title>Gold Key Group | Realtors in Orlando</title>
 
     <link rel="stylesheet" href="../CSS/main/main.css" />
     <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
@@ -21,120 +21,301 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <!-- BODY START -->
+  <!-- 
+      #################################
+                BODY START
+      #################################
+      -->
   <body>
-    <!-- ####################################################################### -->
-    <!-- ####################################################################### -->
-    <!-- HEADER SCREEN START -->
-    <section class="first--screen" id="search">
-      <header class="alt--header">
-        <div class="header--flex">
-          <div class="header--col c1">
-            <h1 class="gkg gkg--lrg ts">
-              Search houses
-            </h1>
-            <br />
-            <br />
-            <p class="egg--p">
-              Translate to:
-              <em><a href="#ENG" title="Click to translate">English</a></em> or
-              <em><a href="#ESP" title="Click to translate">Spanish</a></em>
-            </p>
-          </div>
-        </div>
-        <p class="egg--p" id="header--text">
-          Looking to
-          <b>buy</b>
-          a house in
-          <b>Florida</b>
-          ?
+    <!-- 
+      #################################
+                HEADER START
+      #################################
+      -->
+    <header class="header--disp--ptn header--bg">
+          <h1 class="gkg gkg--lrg text--shadow">
+            SEARCH HOUSES
+          </h1>
           <br />
-          This is the right place!
-        </p>
-      </header>
-      <div class="header--icons">
-        <a href="../HTML/index.html#home">
-          <svg class="fas fa-home"></svg>
-        </a>
-        <a
-          href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
-          target="_blank"
-        >
-          <svg class="fas fa-envelope"></svg>
-        </a>
-        <a href="../HTML/index.html#phone--numbers">
-          <svg class="fas fa-phone"></svg>
-        </a>
-      </div>
-      <div class="header--b--icons">
-        <a href="https://www.facebook.com/goldkeyorlando/" target="_blank">
-          <svg class="fab fa-facebook-f"></svg>
-        </a>
-        <a href="https://www.instagram.com/goldkey_orlando/" target="_blank">
-          <i class="fab fa-instagram fa-fw"></i>
-        </a>
-        <a href="#" target="_blank">
-          <svg class="fab fa-twitter"></svg>
-        </a>
-      </div>
-      <img
-        src="../Images/Revolution Realty.png"
-        alt="Revolution Realty"
-        class="rr--logo bs"
-      />
-    </section>
-    <!-- HEADER SCREEN END -->
-    <!-- ####################################################################### -->
-    <!-- ####################################################################### -->
-    <!-- TOP NAVBAR START -->
+          <p class="egg--p">
+            We speak
+            <em>
+              <a href="#ENG" title="Click to translate">
+                English
+              </a>
+            </em>
+            &
+            <em>
+              <a href="#ESP" title="Click to translate">
+                Spanish
+              </a>
+              !
+            </em>
+          </p>
+        </div>
+      <p class="egg--p" id="header--text"></p>
+    </header>
+    <!-- HEADER ICONS START -->
+    <div class="header--icons">
+      <a href="../HTML/index.html#home">
+        <svg class="fas fa-home"></svg>
+      </a>
+      <a
+        href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+        target="_blank"
+      >
+        <svg class="fas fa-envelope"></svg>
+      </a>
+      <a href="../HTML/index.html#phone--numbers">
+        <svg class="fas fa-phone"></svg>
+      </a>
+    </div>
+    <!-- HEADER ICONS END -->
+    <!-- HEADER ICONS B START -->
+    <div class="header-icons-sm">
+      <a href="https://www.facebook.com/goldkeyorlando/" target="_blank">
+        <svg class="fab fa-facebook-f"></svg>
+      </a>
+      <a href="https://www.instagram.com/goldkey_orlando/" target="_blank">
+        <i class="fab fa-instagram fa-fw"></i>
+      </a>
+      <a href="#" target="_blank">
+        <svg class="fab fa-twitter"></svg>
+      </a>
+    </div>
+    <!-- HEADER ICONS B END -->
+    <!-- ### RR LOGO ### -->
+    <img
+      src="../Images/Revolution Realty.png"
+      alt="Revolution Realty"
+      class="rr--logo bs"
+    />
+    <!-- ### RR LOGO ### -->
+    <!-- 
+        #################################
+                  HEADER END            #################
+        #################################
+        -->
+    <!-- 
+        #################################
+                  TOP NAVBAR START
+        #################################
+        -->
     <div id="top--nav">
       <nav id="main--nav">
         <h3 class="gkg"><a href="index.html">GKG</a></h3>
         <ul>
-          <li><a href="../HTML/index.html#blogs--in--main">Blogs</a></li>
-          <li><a href="../HTML/index.html#phone--numbers">About us</a></li>
-          <li><a href="../HTML/index.html#why--us">Why us</a></li>
-          <li><a href="../HTML/index.html#contact">Contact</a></li>
+          <li><a href="../HTML/index.html#blogs--in--main">BLOGS</a></li>
+          <li><a href="../HTML/index.html#phone--numbers">ABOUT</a></li>
+          <li><a href="../HTML/index.html#why--us">WHY US</a></li>
+          <li><a href="../HTML/index.html#contact">CONTACT</a></li>
           <li><a href="../HTML/search.html" target="_blank">SEARCH</a></li>
           <li><a href="../HTML/sell.html" id="sell--home">SELL</a></li>
         </ul>
       </nav>
     </div>
+    <!-- 
+        #################################
+                  TOP NAVBAR END        #################
+        #################################
+        -->
+    <!-- 
+        #################################
+                  NAV ICONS START
+        #################################
+        -->
+    <div id="nav--icons">
+      <a href="../HTML/index.html#home">
+        <svg class="fas fa-home"></svg>
+      </a>
+      <a
+        href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+        target="_blank"
+      >
+        <svg class="fas fa-envelope"></svg>
+      </a>
+      <a href="../HTML/index.html#phone--numbers">
+        <svg class="fas fa-phone"></svg>
+      </a>
+    </div>
+    <!-- 
+        #################################
+                  NAV ICONS END         #################
+        #################################
+        -->
+    <!-- 
+        #################################
+                  MAIN START
+        #################################
+        -->
+    <main>
+      <!--######################################################################################
+                                          PLACE CONTENT BELLOW
+      #######################################################################################-->
+      <!-- 
+          #################################
+                    SEARCH START
+          #################################
+          -->
+      <section class="screen">
+        <div class="content">
+          <h1 class="gkg text--shadow section--title">Search</h1>
+          <p class="egg--p">
+            Please select the specifications for the property you're looking for
+          </p>
+          <!-- IDX DIV .mls--search -->
+          <div
+            class="mls--search"
+            style="width: 100%; height: 100vh; margin: 3rem 0;"
+          >
+            <iframe
+              src="https://stellar.mlsmatrix.com/Matrix/public/IDX.aspx?idx=e3175684"
+              width="68%"
+              height="95%"
+              frameborder="0"
+              marginwidth="0"
+              marginheight="0"
+              style="
+                border-radius: 10px;
+                margin: 100px;
+                justify-content: center;
+              "
+            ></iframe>
+          </div>
+        </div>
+      </section>
+      <!-- 
+          #################################
+                    SEARCH END             #################
+          #################################
+          -->
+      <!--######################################################################################
+                                          PLACE CONTENT ABOVE
+      #######################################################################################-->
+    </main>
+    <!-- 
+        #################################
+                  MAIN END              #################
+        #################################
+        -->
+    <!-- 
+        #################################
+                  BOTTOM NAVBAR START
+        #################################
+        -->
+    <nav id="bottom--nav">
+      <a href="#blogs--in--main"><svg class="fas fa-arrow-circle-up"></svg></a>
+    </nav>
+    <!-- 
+        #################################
+                  BOTTOM NAVBAR END     #################
+        #################################
+        -->
+    <!-- 
+        #################################
+                  FOOTER START
+        #################################
+        -->
+    <footer>
+      <h1 class="gkg gkg--lrg footer--gkg text--shadow">
+        GOLD <br />
+        KEY <br />
+        GROUP
+      </h1>
+      <div class="footer--grid">
+        <h1>You can always reach us here:</h1>
+        <address>
+          <img
+            src="../Images/gkg--wordless-300x364.png
+          "
+            alt="Gold Key Group logo"
+          />
+          <div class="footer--maria">
+            <h4>Maria Zendejas</h4>
+            Cellphone:
+            <br />
+            <a href="tel:407-913-0154" title="Call Maria">(407)-913-0154</a>
+            <br />
+            <br />
+            E-mail:
+            <br />
+            <a
+              href="mailto:mariazendejas@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Maria%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+              target="_blank"
+              title="Send an e-mail to Maria"
+            >
+              mariazendejasrealestate@gmail.com
+            </a>
+          </div>
+          <div class="footer--paula">
+            <h4>
+              Paula Correa
+            </h4>
+            Cellphone:
+            <br />
+            <a href="tel:407-668-9070" title="Call Paula">
+              (407)-668-9070
+            </a>
+            <br />
+            <br />
+            E-mail:
+            <br />
+            <a
+              href="mailto:paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Paula%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+              target="_blank"
+              title="Send an e-mail to Paula"
+            >
+              paulacorreare@gmail.com
+            </a>
+          </div>
+        </address>
+        <div class="footer--b--icons">
+          <a href="https://www.facebook.com/goldkeyorlando/">
+            <svg class="fab fa-facebook-square"></svg>
+          </a>
+          <a href="https://www.instagram.com/goldkey_orlando/">
+            <svg class="fab fa-instagram-square"></svg>
+          </a>
+          <a href="#">
+            <svg class="fab fa-twitter-square"></svg>
+          </a>
+        </div>
 
-    <!-- TOP NAVBAR END -->
-    <!-- ####################################################################### -->
-    <!-- ####################################################################### -->
-    <!-- SECOND SCREEN START -->
-    <section class="screen">
-      <div class="content">
-        <div
-          class="mls--search"
-          style="width: 100%; height: 100vh; margin: 3rem 0;"
-        >
-          <iframe
-            src="https://stellar.mlsmatrix.com/Matrix/public/IDX.aspx?idx=e3175684"
-            width="68%"
-            height="95%"
-            frameborder="0"
-            marginwidth="0"
-            marginheight="0"
-            style="border-radius: 10px; margin: 100px; justify-content: center;"
-          ></iframe>
+        <p>
+          <b>
+            &copy; 2020 Gold Key Group Orlando. All rights reserved.
+          </b>
+          The data relating to real estate displayed on this website comes in
+          part from the Internet Data Exchange (IDX) Program of My Florida
+          Regional MLS DBA Stellar MLS. All listing information is deemed
+          reliable but not guaranteed and should be independently verified
+          through personal inspection by appropriate professionals. Listings
+          displayed on this website may be subject to prior sale or removal from
+          sale; availability of any listing should always be independently
+          verified. Listing information is provided for consumers' personal,
+          non-commercial use, solely to identify potential properties for
+          potential purchase; all other use is strictly prohibited and may
+          violate relevant federal and state law. Last updated 08/13/2020 XX:XX
+          AM
+        </p>
+        <div class="af--logos">
+          <img
+            src="../Images/Revolution Realty.png"
+            alt="Revolution Realty logo"
+          />
+          <img src="../Images/StellarMLS.png" alt="Stellar MLS logo" />
         </div>
       </div>
-    </section>
-    <!-- SECOND SCREEN END -->
-    <!-- BACK TO TOP NAV START -->
-    <nav id="bottom--nav">
-      <a href="#top"><svg class="fas fa-arrow-circle-up"></svg></a>
-    </nav>
-    <!-- BACK TO TOP NAV END -->
-    <!-- FOOTER START -->
-    <footer>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat,
-      molestiae!
     </footer>
-    <!-- FOOTER END -->
+    <!-- 
+        #################################
+                  FOOTER END            #################
+        #################################
+        -->
   </body>
-  <!-- BODY END -->
+  <!-- 
+      #################################
+                BODY END              #################
+      #################################
+  -->
 </html>
