--- a/HTML/sell.html
+++ b/HTML/sell.html
@@ -26,11 +26,11 @@
     <!-- ####################################################################### -->
     <!-- ####################################################################### -->
     <!-- HEADER SCREEN START -->
-    <section class="first--screen" id="home">
+    <section class="header--bg" id="home">
       <header class="alt--header">
         <div class="header--flex">
           <div class="header--col c1">
-            <h1 class="gkg gkg--lrg ts">
+            <h1 class="gkg gkg--lrg text--shadow section--title">
               GOLD <br />
               KEY <br />
               GROUP
@@ -76,7 +76,7 @@
           <svg class="fas fa-phone"></svg>
         </a>
       </div>
-      <div class="header--b--icons">
+      <div class="header-icons-sm">
         <a href="https://www.facebook.com/goldkeyorlando/" target="_blank">
           <svg class="fab fa-facebook-f"></svg>
         </a>
